--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,12 @@
 version: '3.8'
 
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: elect-todo
-    restart: unless-stopped
+  elect-todo:
+    build: .
     ports:
-      - "8282:3000"
+      - "3000:3000"
     environment:
-      - NODE_ENV=production
-      - NEXT_PUBLIC_SUPABASE_URL=${SUPABASE_URL}
-      - NEXT_PUBLIC_SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
-    env_file:
-      - .env.local
-    networks:
-      - app-network
-
-networks:
-  app-network:
-    driver: bridge
+      - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
+      - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+    restart: unless-stopped
+    container_name: elect-todo-app
