--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,17 @@ version: '3.8'
 
 services:
   elect-todo:
-    build: .
+    image: node:18-alpine
+    working_dir: /app
+    command: sh -c "npm ci && npm run build && npm start"
     ports:
       - "3000:3000"
     environment:
+      - NODE_ENV=production
       - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
       - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+    volumes:
+      - ./:/app
+      - /app/node_modules
     restart: unless-stopped
     container_name: elect-todo-app
