--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,24 @@ version: '3.8'
 
 services:
   elect-todo:
-    image: node:18-alpine
-    working_dir: /app
-    command: sh -c "npm install && npm run build && npm start"
+    build:
+      context: .
+      dockerfile_inline: |
+        FROM node:18-alpine
+        WORKDIR /app
+        COPY package*.json ./
+        RUN npm install
+        COPY . .
+        RUN npm run build
+        EXPOSE 3000
+        ENV NODE_ENV=production
+        ENV PORT=3000
+        ENV HOSTNAME="0.0.0.0"
+        CMD ["npm", "start"]
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=production
       - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
       - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
-    volumes:
-      - ./:/app
-      - /app/node_modules
     restart: unless-stopped
     container_name: elect-todo-app
