--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,29 @@ version: '3.8'
 
 services:
   elect-todo:
-    build:
-      context: .
-      dockerfile_inline: |
-        FROM node:18-alpine
-        WORKDIR /app
-        COPY package*.json ./
-        RUN npm install
-        COPY . .
-        RUN npm run build
-        EXPOSE 3000
-        ENV NODE_ENV=production
-        ENV PORT=3000
-        ENV HOSTNAME="0.0.0.0"
-        CMD ["npm", "start"]
+    image: node:18-alpine
+    container_name: elect-todo-app
+    working_dir: /app
+    command: >
+      sh -c "
+        apk add --no-cache git &&
+        git clone https://github.com/creativekamrul/elec-todo.git /tmp/repo &&
+        cp -r /tmp/repo/* /app/ &&
+        cp -r /tmp/repo/.* /app/ 2>/dev/null || true &&
+        rm -rf /tmp/repo &&
+        npm install &&
+        npm run build &&
+        npm start
+      "
     ports:
       - "3000:3000"
     environment:
+      - NODE_ENV=production
       - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
       - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+    volumes:
+      - elect-todo-app:/app
     restart: unless-stopped
-    container_name: elect-todo-app
+
+volumes:
+  elect-todo-app:
