--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,18 @@
-version: '3.8'
+version: "3.9"
 
 services:
-  elect-todo:
-    image: node:18-alpine
-    container_name: elect-todo-app
-    working_dir: /app
-    command: >
-      sh -c "
-        apk add --no-cache git &&
-        git clone https://github.com/creativekamrul/elec-todo.git /tmp/repo &&
-        cp -r /tmp/repo/* /app/ &&
-        cp -r /tmp/repo/.* /app/ 2>/dev/null || true &&
-        rm -rf /tmp/repo &&
-        npm install &&
-        npm run build &&
-        npm start
-      "
+  electodo:
+    container_name: electodo
+    image: electodo
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_SUPABASE_URL: ${NEXT_PUBLIC_SUPABASE_URL}
+        NEXT_PUBLIC_SUPABASE_ANON_KEY: ${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+    environment:
+      NEXT_PUBLIC_SUPABASE_URL: ${NEXT_PUBLIC_SUPABASE_URL}
+      NEXT_PUBLIC_SUPABASE_ANON_KEY: ${NEXT_PUBLIC_SUPABASE_ANON_KEY}
     ports:
       - "3000:3000"
-    environment:
-      - NODE_ENV=production
-      - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
-      - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
-    volumes:
-      - elect-todo-app:/app
     restart: unless-stopped
-
-volumes:
-  elect-todo-app:
